Sun May 21 2006  Loic Dachary  <loic@dachary.org>

	* Release 1.0.20

	* pokerui/pokerdisplay.py (PokerDisplay.setSoundEnabled): the
	  display may refuse to set the sound

Sat Apr 22 2006  Loic Dachary  <loic@gnu.org>

	* pokerclient2d/pokerdisplay2d.py (PokerDisplay2D.render): play timeout
	  sounds only for self, not for other players

	* smoother swap self_in_position and timeout_notice

Wed May 10 2006  Cedric Pinson  <cpinson@freesheep.org>

	* Release 1.0.19

	* pokerui/pokerrenderer.py:
	it's not require to restart the game if we disable the sound

Fri Apr 21 2006  Loic Dachary  <loic@gnu.org>

	* tests/test-poker-interface.py: test all functions of poker-interface

	* pokerclient2d/outfits.c (param_update_preview): gdk_region_destroy leak fix

	* pokerclient2d/cashier.c (handle_cashier): free fields[] (leak)

	* pokerclient2d/lobby.c (handle_lobby): test that image exists

	* pokerclient2d/chat.c (destroy_smiley_array): do not free NULL array

	* configure.ac: search for valgrind & vncserver

	* test/* : rearchitecture to centralize in run.in

	* pokerclient2d/chat.c (create_smiley_array): (char*) instead of (char)

Wed Apr 19 2006  Loic Dachary  <loic@gnu.org>

	* Release 1.0.18

	* tests/test-pokernetworkconfig.py.in (PokerNetworkConfigTestCase.test_notify): 
	  unit tests for pokernetworkconfig

	* pokerclient2d/pokerdisplay2d.py (PokerDisplay2D.settingsUpdated): update instance
	  members each time the settings are updated

	* pokerclient2d/{dispatcher,main}.c: no #if HAVE_CONFIG_H

	* configure.ac: remove useless config.h

Tue Apr 18 2006  Loic Dachary  <loic@gnu.org>

	* Makefile.am (clean-local): all autotool files in config dir
	  MAINTAINERCLEANFILES simpler because all in config dir

	* tests/coverage_{reset,report}.in, tests/coverage.py: 
	  code coverage report from http://nedbatchelder.com/code/modules/coverage.html

	* pokernetwork/pokernetworkconfig.py (Config.headerSet): config modification notifications
